fixes header legibility regression with reduced motion

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ header {
       animation: magic 7s ease infinite forwards;
     }
 
-    @supports (background: paint(something)) {
+    @supports (background: paint(something)) and not (prefers-reduced-motion: reduce) {
       & {
         background: conic-gradient(
           from var(--conicAngle) at 50% -200%, 
